--- a/About me/Storyboards/Base.lproj/Main.storyboard
+++ b/About me/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,14 +13,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="About_me" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="rNM-9j-DRH">
-                                <rect key="frame" x="20" y="174.5" width="280" height="219"/>
+                                <rect key="frame" x="20" y="338.5" width="374" height="219"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="O2K-x9-EAE">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="EvM-Ca-qSb"/>
                                         </constraints>
@@ -27,7 +28,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" textContentType="username"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="r09-ho-yOK">
-                                        <rect key="frame" x="0.0" y="84" width="280" height="50"/>
+                                        <rect key="frame" x="0.0" y="84" width="374" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="ebl-Pe-DTq"/>
                                         </constraints>
@@ -35,7 +36,7 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vus-Zo-Q2A">
-                                        <rect key="frame" x="0.0" y="168" width="280" height="51"/>
+                                        <rect key="frame" x="0.0" y="168" width="374" height="51"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" buttonSize="large">
                                             <attributedString key="attributedTitle">
@@ -50,23 +51,23 @@
                                             <color key="baseBackgroundColor" red="0.52715533969999995" green="0.67969137430000004" blue="0.8970826864" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <segue destination="Ywv-DW-PS4" kind="modal" modalPresentationStyle="fullScreen" id="6jn-9y-8s2"/>
+                                            <segue destination="svC-w2-143" kind="presentation" modalPresentationStyle="fullScreen" id="yj7-ls-5nG"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="a2n-yc-4Yh">
-                                <rect key="frame" x="16" y="423.5" width="288" height="31"/>
+                                <rect key="frame" x="16" y="587.5" width="382" height="31"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1f-r5-gS2">
-                                        <rect key="frame" x="0.0" y="0.0" width="145" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="192.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Forgot username?">
                                             <color key="baseForegroundColor" red="0.44584000109999999" green="0.57524520160000003" blue="0.75533241029999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vd8-44-qJd">
-                                        <rect key="frame" x="145" y="0.0" width="143" height="31"/>
+                                        <rect key="frame" x="192.5" y="0.0" width="189.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Forgot password?">
                                             <color key="baseForegroundColor" red="0.42172846200000003" green="0.54772764439999999" blue="0.7243927121" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -96,25 +97,25 @@
             </objects>
             <point key="canvasLocation" x="90" y="80"/>
         </scene>
-        <!--Welcome Page View Controller-->
+        <!--Welcome-->
         <scene sceneID="4k9-6g-Ro8">
             <objects>
                 <viewController id="Ywv-DW-PS4" customClass="WelcomePageViewController" customModule="About_me" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ujf-je-79e">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="MIa-hr-Rig">
-                                <rect key="frame" x="20" y="100" width="280" height="114.5"/>
+                                <rect key="frame" x="20" y="144" width="374" height="114.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uc8-Uc-gx7">
-                                        <rect key="frame" x="43.5" y="0.0" width="193.5" height="26.5"/>
+                                        <rect key="frame" x="90.5" y="0.0" width="193.5" height="26.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <color key="textColor" red="0.44584000109999999" green="0.57524520160000003" blue="0.75533241029999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UKA-Jd-8JM">
-                                        <rect key="frame" x="117.5" y="66.5" width="45" height="48"/>
+                                        <rect key="frame" x="164.5" y="66.5" width="45" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -130,11 +131,109 @@
                             <constraint firstItem="JJ4-RL-F1W" firstAttribute="trailing" secondItem="MIa-hr-Rig" secondAttribute="trailing" constant="20" id="qF2-Np-4rf"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Welcome" image="house" catalog="system" id="NM2-tt-YNt"/>
                     <navigationItem key="navigationItem" id="g32-ZQ-NTz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHg-WV-fNc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="832.5" y="78.16901408450704"/>
+            <point key="canvasLocation" x="1830" y="78.16901408450704"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lxW-NU-yNq">
+            <objects>
+                <viewController id="ffg-kL-vNe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cvi-VQ-50W">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="6bn-UD-zSv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Lm2-0r-Ot5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3tF-QY-jk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3576.811594202899" y="77.678571428571431"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="679-On-FHY">
+            <objects>
+                <viewController id="fGP-TO-Rjf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a5b-KE-iO3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="JaT-XV-Eld"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Did-bg-SjI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L7d-hE-x0W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5337.68115942029" y="77.678571428571431"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="TZx-Xm-oDR">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="svC-w2-143" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0UX-GP-RA6">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Ywv-DW-PS4" kind="relationship" relationship="viewControllers" id="6AF-kY-ynb"/>
+                        <segue destination="fqA-bH-h9o" kind="relationship" relationship="viewControllers" id="qad-ak-3Oq"/>
+                        <segue destination="cn1-jS-jBG" kind="relationship" relationship="viewControllers" id="m10-o0-WvY"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rbA-Cx-AfV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="933" y="80"/>
+        </scene>
+        <!--About me-->
+        <scene sceneID="KQe-bV-Jxw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fqA-bH-h9o" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="About me" image="person" catalog="system" id="pqq-qJ-OtU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ldu-gw-Jud">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ffg-kL-vNe" kind="relationship" relationship="rootViewController" id="PCP-7p-18g"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBS-g5-HZY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2666.666666666667" y="77.678571428571431"/>
+        </scene>
+        <!--My hobby-->
+        <scene sceneID="oY8-hJ-kD6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cn1-jS-jBG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="My hobby" image="heart" catalog="system" id="oFF-7o-lkt"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="l83-te-BJe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fGP-TO-Rjf" kind="relationship" relationship="rootViewController" id="Q15-Fn-RxC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fU9-Ox-5pr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4427.536231884058" y="77.678571428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="house" catalog="system" width="128" height="106"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
